kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kafka

spec:
  replicas: 1

  selector:
    matchLabels:
      app: kafka

  template:
    metadata:
      labels:
        app: kafka

    spec:
      containers:
        - name: kafka

          image: apache/kafka:latest

          ports:
            - containerPort: 9092
