service.yaml
apiVersion: v1
kind: Service

metadata:
  name: payment-service

spec:
  selector:
    app: payment-system

  ports:
    - port: 8080
      targetPort: 8080

  type: NodePort
